--- a/frontend/shopping-list/src/App.css
+++ b/frontend/shopping-list/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
   background-color: #adaad6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-container {
+  flex: 1;
 }
 
 .App-logo {
